# meowdy

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/images/: Logo.ase  buildings.ase  groundwide.ase  head.ase  letter.ase  snakebackground.ase  storyboard.psd  tail.ase
assets/sprites/: Player.ase  groundwide.ase  mainmenuscreen.ase
src/: animation.rs  assets.rs  control.rs  main.rs  player.rs  scene.rs
src/scene/: end.rs  menu.rs  outside.rs  post_office.rs
