[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "meowdy"
version = "0.1.0"

[dependencies]
bevy = "0.6.1"
bevy-inspector-egui = "0.8.2"
bevy_asset_loader = "0.9.0"
bevy_rapier2d = { version = "0.12.1", features = [ "render" ] }
clap = { version = "3.1.12", features = ["derive"] }
rand = "0.8.5"
tracing = "0.1.32"
